unit tests with pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,8 @@ max-line-length = 120
 
 [tool.black]
 line-length = 120
+
+[isort]
+profile = black
+known_first_party = app,tests,utils
+line_length = 120
