--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,9 @@
+default_language_version:
+  python: python3.14
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v6.0.0
     hooks:
       - id: check-added-large-files
       - id: check-builtin-literals
@@ -9,7 +12,6 @@ repos:
       - id: check-json
       - id: check-merge-conflict
       - id: check-toml
-      - id: check-xml
       - id: check-yaml
       - id: end-of-file-fixer
       - id: mixed-line-ending
@@ -26,39 +28,39 @@ repos:
       - id: python-no-eval
       - id: text-unicode-replacement-char
 
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.5.5
-    hooks:
-      - id: forbid-crlf
-      - id: remove-crlf
-      - id: forbid-tabs
-      - id: remove-tabs
-
-  - repo: https://github.com/psf/black
-    rev: 24.8.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/PyCQA/autoflake
     rev: v2.3.1
     hooks:
       - id: autoflake
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.1.1
-    hooks:
-      - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.10.1
     hooks:
       - id: isort
 
+  - repo: https://github.com/psf/black
+    rev: 26.1.0
+    hooks:
+      - id: black
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.3.0
+    hooks:
+      - id: flake8
+        args:
+          - --max-complexity=10
+          - --statistics
+          - --max-line-length=120
+
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
+    rev: v1.19.1
     hooks:
       - id: mypy
         additional_dependencies:
-          - alembic==1.14.1
-          - asyncpg==0.30.0
-          - sqlalchemy[mypy]==2.0.37
+          - alembic==1.18.4
+          - asyncpg==0.31.0
+          - fastapi==0.129.0
+          - pydantic==2.12.5
+          - pydantic-settings==2.12.0
+          - pytest==9.0.2
+          - sqlalchemy[mypy]==2.0.46
