--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,12 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.11 AS python_base
+ARG PYTHON_VERSION=3.14.3
+FROM python:${PYTHON_VERSION}-slim AS python_base
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 COPY ./requirements.txt /app/requirements.txt
-RUN python -m pip install --no-cache-dir -r /app/requirements.txt
+RUN python -m pip install --upgrade pip \
+    && python -m pip install --no-cache-dir -r /app/requirements.txt
 
 WORKDIR /app
 COPY ./app /app/app
@@ -10,4 +16,4 @@ RUN chmod +x /app/prestart.sh
 RUN adduser --disabled-password --gecos '' appuser && chown -R appuser /app
 USER appuser
 
-CMD ["/start-reload.sh"]
+CMD ["sh", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --reload"]
