--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,10 @@ services:
       - "${DB_PORT}:${DB_PORT}"
 
   backend:
-    build: backend
+    build:
+      context: backend
+      args:
+        PYTHON_VERSION: "${PYTHON_VERSION:-3.14.3}"
     container_name: "${API_HOST}"
     depends_on:
       database:
