chore: unify backend env config for Docker and Alembic

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,5 @@ RUN chmod +x /app/prestart.sh
 RUN adduser --disabled-password --gecos '' appuser && chown -R appuser /app
 USER appuser
 
-CMD ["sh", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --reload"]
+ENTRYPOINT ["/app/prestart.sh"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
