chore(books-app): upgrade major deps (Next 16, Jest 30, Tailwind 4) and fix lint/test compatibility

--- a/.env_examples
+++ b/.env_examples
@@ -50,6 +50,14 @@ UI_HOST=next
 # UI_PORT: frontend port exposed on host.
 UI_PORT=3000
 
+# NEXT_PUBLIC_API_ORIGIN: API origin consumed by browser-side frontend code.
+# If API_PORT changes, update this value accordingly.
+NEXT_PUBLIC_API_ORIGIN=http://localhost:8000
+
+# NEXT_PUBLIC_API_BASE_PATH: API base path consumed by browser-side frontend code.
+# Use /api by default; change to / when API routes are at root.
+NEXT_PUBLIC_API_BASE_PATH=/api
+
 # UI_PATH: reserved for proxy/path-based deployments (not consumed directly here).
 UI_PATH=/
 
