--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,10 +63,18 @@ services:
 
   frontend:
     hostname: "${UI_HOST}"
-    build: books-app
+    build:
+      context: books-app
+      args:
+        NEXT_PUBLIC_API_ORIGIN: "${NEXT_PUBLIC_API_ORIGIN}"
+        NEXT_PUBLIC_API_BASE_PATH: "${NEXT_PUBLIC_API_BASE_PATH}"
     container_name: "${UI_HOST}"
     depends_on:
       backend:
         condition: service_healthy
+    environment:
+      NEXT_PUBLIC_API_ORIGIN: "${NEXT_PUBLIC_API_ORIGIN}"
+      NEXT_PUBLIC_API_BASE_PATH: "${NEXT_PUBLIC_API_BASE_PATH}"
+      PORT: "${UI_PORT}"
     ports:
       - "${UI_PORT}:${UI_PORT}"
