chore(books-app): harden Docker build, add .dockerignore, and align project docs/config

--- a/books-app/tsconfig.json
+++ b/books-app/tsconfig.json
@@ -17,6 +17,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
+    "tsBuildInfoFile": ".next/cache/tsconfig.tsbuildinfo",
     "plugins": [
       {
         "name": "next"
