--- a/compose.yaml
+++ b/compose.yaml
@@ -1,27 +1,24 @@
+name: books-dev
+
 services:
   database:
     image: postgres:18.2
-    container_name: "${DB_HOST}"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 20s
       timeout: 20s
       retries: 20
       start_period: 10s
-    hostname: "${DB_HOST}"
     environment:
       POSTGRES_USER: "${DB_USER}"
       POSTGRES_DB: "${DB_NAME}"
       POSTGRES_PASSWORD: "${DB_PASSWORD}"
-    ports:
-      - "${DB_PORT}:${DB_PORT}"
 
   backend:
     build:
       context: backend
       args:
         PYTHON_VERSION: "${PYTHON_VERSION:-3.14.3}"
-    container_name: "${API_HOST}"
     depends_on:
       database:
         condition: service_healthy
@@ -48,27 +45,18 @@ services:
       DB_USER: "${DB_USER}"
       LOG_LEVEL: "${LOG_LEVEL:-INFO}"
       PORT: "${API_PORT}"
-      WATCHFILES_FORCE_POLLING: "true"
     logging:
       driver: "json-file"
       options:
         max-size: "${BACKEND_LOG_MAX_SIZE:-10m}"
         max-file: "${BACKEND_LOG_MAX_FILE:-3}"
-    hostname: "${API_HOST}"
-    ports:
-      - "${API_PORT}:${API_PORT}"
-    volumes:
-      - ./backend/app:/app/app
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${API_PORT}", "--reload", "--reload-dir", "/app/app"]
 
   frontend:
-    hostname: "${UI_HOST}"
     build:
       context: books-app
       args:
         NEXT_PUBLIC_API_ORIGIN: "${NEXT_PUBLIC_API_ORIGIN}"
         NEXT_PUBLIC_API_BASE_PATH: "${NEXT_PUBLIC_API_BASE_PATH}"
-    container_name: "${UI_HOST}"
     depends_on:
       backend:
         condition: service_healthy
@@ -76,5 +64,3 @@ services:
       NEXT_PUBLIC_API_ORIGIN: "${NEXT_PUBLIC_API_ORIGIN}"
       NEXT_PUBLIC_API_BASE_PATH: "${NEXT_PUBLIC_API_BASE_PATH}"
       PORT: "${UI_PORT}"
-    ports:
-      - "${UI_PORT}:${UI_PORT}"
