--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,10 +47,8 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        args:
-          - --max-complexity=10
-          - --statistics
-          - --max-line-length=120
+        additional_dependencies:
+          - flake8-pyproject
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.19.1
