--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ asyncpg==0.31.0
 fastapi==0.129.0
 pydantic==2.12.5
 pydantic-settings==2.13.0
+python-multipart==0.0.20
 sqlalchemy[asyncio]==2.0.46
 uvicorn==0.40.0
