--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,5 +60,6 @@ repos:
           - fastapi==0.129.0
           - pydantic==2.12.5
           - pydantic-settings==2.13.0
+          - PyJWT==2.10.1
           - pytest==9.0.2
           - sqlalchemy[mypy]==2.0.46
